flex issue on mobile, fix attempt

--- a/sass/cards/cards.sass
+++ b/sass/cards/cards.sass
@@ -1,11 +1,11 @@
 //Refactor with mixin for vendor prefixes
 
 #cards
-	display: -webkit-box   /* OLD: Safari,  iOS, Android browser, older WebKit browsers.  */
-	display: -moz-box      /* OLD: Firefox (buggy) */
-	display: -moz-flex
-	display: -ms-flexbox   /* MID: IE 10 */
-	display: -webkit-flex
+	// display: -webkit-box   /* OLD: Safari,  iOS, Android browser, older WebKit browsers.  */
+	// display: -moz-box      /* OLD: Firefox (buggy) */
+	// display: -moz-flex
+	// display: -ms-flexbox   /* MID: IE 10 */
+	// display: -webkit-flex
 	display: flex
 	//Bug on iOS: cards not wrapping
 	// flex-wrap: wrap
@@ -13,19 +13,19 @@
 	// -moz-flex-wrap: wrap
 	// -ms-flex-wrap: wrap
 
-	-webkit-flex-flow: row wrap
-	-moz-flex-flow: row wrap
-	-ms-flex-flow: row wrap
+	// -webkit-flex-flow: row wrap
+	// -moz-flex-flow: row wrap
+	// -ms-flex-flow: row wrap
 	flex-flow: row wrap
 	margin-bottom: 3em
 	.card-container
 		margin: 1em auto
 		// width: 100%
 		display: inline-block
-		-webkit-box-flex: 3
-		-webkit-flex: 3
-		-moz-flex: 3
-		-ms-flex: 3
+		// -webkit-box-flex: 3
+		// -webkit-flex: 3
+		// -moz-flex: 3
+		// -ms-flex: 3
 		flex: 3
 		.card-inner
 			// margin: 1em
